[metadata]
# replace with your username:
name = taco
version = 0.1
author = James Kuszlewicz
author_email = james.kuszlewicz@gmail.com
description = Tools for the Automated Characterisation of Oscillations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jsk389/TACO/
project_urls =
    Bug Tracker = https://github.com/jsk389/TACO/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
