[metadata]
name = taco
version = 0.1
author = Saskia Hekker
author_email = saskia.hekker@h-its.org
description = Tools for the Automated Characterisation of Oscillations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HITS-TOS/TACO
project_urls =
    Bug Tracker = https://github.com/HITS-TOS/TACO/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    argparse
    emcee
    lightkurve
    loguru
    nbformat
    numba
    numpy
    pandas
    plotly
    pyyaml
    rpy2==3.3.*
    scipy
    sklearn

[options.extras_require]
test =
    pytest

[options.packages.find]
exclude = tests
where = src

[tool:pytest]
timeout = 30
testpaths = tests
